--- a/SpendSense-BackEnd/src/main/resources/application.properties
+++ b/SpendSense-BackEnd/src/main/resources/application.properties
@@ -8,12 +8,12 @@ spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
 
 #Ensure that connection to db is established or ddl would cause build to fail
-spring.jpa.hibernate.ddl-auto=create-update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 #SQL Statement logging
